# certboy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  VERSION  bumpver.toml  cliff.toml  zensical.toml
.github/workflows/: build.yml  ci-build.yml  ci-bumpversion.yml  ci-git-tag.yml  ci-pages.yml  ci-pr.yml  ci-publish.yml  ci-release.yml  ci-tests.yml  ci.yml
docs/: _config.yml  get-started.md  guide.md  index.md  pipeline.md  user-guides.md
docs/reference/: index.md
docs/user-guides/: check.md  context.md  import-export.md  index.md  intermediate-ca.md  key-algorithm.md  renewal.md  revoke.md  root-ca.md  shell-completion.md  tls-certificates.md
scripts/: capture_screenshots.py  capture_screenshots.sh  capture_screenshots_imagemagick.sh  quickstart.sh
src/: ca.rs  cert.rs  ica.rs  lib.rs  main.rs  types.rs  utils.rs
tests/: smoke.rs
