[package]
name = "certboy"
version = "2026.16.10"
edition = "2021"
authors = ["audric <audric.s@outlook.com>"]
description = "yet-another-cert-manager"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
getrandom = "0.2"
time = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
rand = "0.9"
chrono = "0.4"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"
serial_test = "2"
cargo-llvm-cov = "0.6"
assert_cmd = "2"
predicates = "3"
